CURRENT/java/src/org/mariuszgromada/math/mxparser/syntaxchecker/SyntaxChecker.java
/* SyntaxChecker.java */
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package org.mariuszgromada.math.mxparser.syntaxchecker;

public final class SyntaxChecker implements SyntaxCheckerConstants {
        public final void checkSyntax() throws ParseException, TokenMgrError {
                start();
        }

/*
 * Lexer logic - grammar
 */
  final public void start() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DECIMAL:
    case BASE1:
    case BASE2:
    case BASE3:
    case BASE4:
    case BASE5:
    case BASE6:
    case BASE7:
    case BASE8:
    case BASE9:
    case BASE10:
    case BASE11:
    case BASE12:
    case BASE13:
    case BASE14:
    case BASE15:
    case BASE16:
    case BASE17:
    case BASE18:
    case BASE19:
    case BASE20:
    case BASE21:
    case BASE22:
    case BASE23:
    case BASE24:
    case BASE25:
    case BASE26:
    case BASE27:
    case BASE28:
    case BASE29:
    case BASE30:
    case BASE31:
    case BASE32:
    case BASE33:
    case BASE34:
    case BASE35:
    case BASE36:
    case BINARY:
    case OCTAL:
    case HEXADECIMAL:
    case FRACTION:
    case LEFT_PAR:
    case PLUS:
    case MINUS:
    case NOT:
    case UNICODE_ROOT:
    case BITNOT:
    case IDENTIFIER:
    case LEFT_OR_RIGHT_DER:
    case UNICODE_NAME:
    case 126:
    case 127:
    case 128:{
      expression();
      jj_consume_token(0);
      break;
      }
    case 0:{
      jj_consume_token(0);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void expression() throws ParseException {
    binaryExpression();
}

  final public void binaryExpression() throws ParseException {
    unaryRigthExpression();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case MULTIPLY:
      case DIV:
      case POWER:
      case TETRATION:
      case MODULO:
      case EQ:
      case NEQ:
      case LT:
      case LEQ:
      case GT:
      case GEQ:
      case OR:
      case AND:
      case IMP:
      case CIMP:
      case NIMP:
      case CNIMP:
      case NAND:
      case EQV:
      case NOR:
      case BITWISE:
      case XOR:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      binaryOperator();
      unaryRigthExpression();
    }
}

  final public void unaryRigthExpression() throws ParseException {
    unaryLeftExpression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FACTORIAL:
    case PERCENTAGE:{
      unaryRigthOperator();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
}

  final public void unaryLeftExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:
    case UNICODE_ROOT:
    case BITNOT:{
      unaryLeftOperator();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    itemExpression();
}

  final public void binaryOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      break;
      }
    case MULTIPLY:{
      jj_consume_token(MULTIPLY);
      break;
      }
    case DIV:{
      jj_consume_token(DIV);
      break;
      }
    case MODULO:{
      jj_consume_token(MODULO);
      break;
      }
    case POWER:{
      jj_consume_token(POWER);
      break;
      }
    case TETRATION:{
      jj_consume_token(TETRATION);
      break;
      }
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case NEQ:{
      jj_consume_token(NEQ);
      break;
      }
    case GT:{
      jj_consume_token(GT);
      break;
      }
    case GEQ:{
      jj_consume_token(GEQ);
      break;
      }
    case LT:{
      jj_consume_token(LT);
      break;
      }
    case LEQ:{
      jj_consume_token(LEQ);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    case AND:{
      jj_consume_token(AND);
      break;
      }
    case NOR:{
      jj_consume_token(NOR);
      break;
      }
    case NAND:{
      jj_consume_token(NAND);
      break;
      }
    case XOR:{
      jj_consume_token(XOR);
      break;
      }
    case IMP:{
      jj_consume_token(IMP);
      break;
      }
    case CIMP:{
      jj_consume_token(CIMP);
      break;
      }
    case NIMP:{
      jj_consume_token(NIMP);
      break;
      }
    case CNIMP:{
      jj_consume_token(CNIMP);
      break;
      }
    case EQV:{
      jj_consume_token(EQV);
      break;
      }
    case BITWISE:{
      jj_consume_token(BITWISE);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void unaryRigthOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FACTORIAL:{
      jj_consume_token(FACTORIAL);
      break;
      }
    case PERCENTAGE:{
      jj_consume_token(PERCENTAGE);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void unaryLeftOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      break;
      }
    case BITNOT:{
      jj_consume_token(BITNOT);
      break;
      }
    case UNICODE_ROOT:{
      label_2:
      while (true) {
        jj_consume_token(UNICODE_ROOT);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case UNICODE_ROOT:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void itemExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DECIMAL:
      case BASE1:
      case BASE2:
      case BASE3:
      case BASE4:
      case BASE5:
      case BASE6:
      case BASE7:
      case BASE8:
      case BASE9:
      case BASE10:
      case BASE11:
      case BASE12:
      case BASE13:
      case BASE14:
      case BASE15:
      case BASE16:
      case BASE17:
      case BASE18:
      case BASE19:
      case BASE20:
      case BASE21:
      case BASE22:
      case BASE23:
      case BASE24:
      case BASE25:
      case BASE26:
      case BASE27:
      case BASE28:
      case BASE29:
      case BASE30:
      case BASE31:
      case BASE32:
      case BASE33:
      case BASE34:
      case BASE35:
      case BASE36:
      case BINARY:
      case OCTAL:
      case HEXADECIMAL:
      case FRACTION:
      case IDENTIFIER:
      case LEFT_OR_RIGHT_DER:
      case UNICODE_NAME:
      case 126:
      case 127:
      case 128:{
        itemOrFunctionOptionalImpliedMultiplication();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LEFT_PAR:
        case UNICODE_ROOT:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LEFT_PAR:{
            bracketedExpressionOptionalImpliedMultiplication();
            break;
            }
          case UNICODE_ROOT:{
            label_4:
            while (true) {
              jj_consume_token(UNICODE_ROOT);
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case UNICODE_ROOT:{
                ;
                break;
                }
              default:
                jj_la1[10] = jj_gen;
                break label_4;
              }
            }
            bracketedExpressionOptionalImpliedMultiplication();
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DECIMAL:
        case BASE1:
        case BASE2:
        case BASE3:
        case BASE4:
        case BASE5:
        case BASE6:
        case BASE7:
        case BASE8:
        case BASE9:
        case BASE10:
        case BASE11:
        case BASE12:
        case BASE13:
        case BASE14:
        case BASE15:
        case BASE16:
        case BASE17:
        case BASE18:
        case BASE19:
        case BASE20:
        case BASE21:
        case BASE22:
        case BASE23:
        case BASE24:
        case BASE25:
        case BASE26:
        case BASE27:
        case BASE28:
        case BASE29:
        case BASE30:
        case BASE31:
        case BASE32:
        case BASE33:
        case BASE34:
        case BASE35:
        case BASE36:
        case BINARY:
        case OCTAL:
        case HEXADECIMAL:
        case FRACTION:
        case UNICODE_ROOT:
        case IDENTIFIER:
        case LEFT_OR_RIGHT_DER:
        case UNICODE_NAME:
        case 126:
        case 127:
        case 128:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case DECIMAL:
          case BASE1:
          case BASE2:
          case BASE3:
          case BASE4:
          case BASE5:
          case BASE6:
          case BASE7:
          case BASE8:
          case BASE9:
          case BASE10:
          case BASE11:
          case BASE12:
          case BASE13:
          case BASE14:
          case BASE15:
          case BASE16:
          case BASE17:
          case BASE18:
          case BASE19:
          case BASE20:
          case BASE21:
          case BASE22:
          case BASE23:
          case BASE24:
          case BASE25:
          case BASE26:
          case BASE27:
          case BASE28:
          case BASE29:
          case BASE30:
          case BASE31:
          case BASE32:
          case BASE33:
          case BASE34:
          case BASE35:
          case BASE36:
          case BINARY:
          case OCTAL:
          case HEXADECIMAL:
          case FRACTION:
          case IDENTIFIER:
          case LEFT_OR_RIGHT_DER:
          case UNICODE_NAME:
          case 126:
          case 127:
          case 128:{
            itemOrFunctionOptionalImpliedMultiplication();
            break;
            }
          case UNICODE_ROOT:{
            label_5:
            while (true) {
              jj_consume_token(UNICODE_ROOT);
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case UNICODE_ROOT:{
                ;
                break;
                }
              default:
                jj_la1[13] = jj_gen;
                break label_5;
              }
            }
            itemOrFunctionOptionalImpliedMultiplication();
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        break;
        }
      case LEFT_PAR:{
        bracketedExpressionOptionalImpliedMultiplication();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DECIMAL:
        case BASE1:
        case BASE2:
        case BASE3:
        case BASE4:
        case BASE5:
        case BASE6:
        case BASE7:
        case BASE8:
        case BASE9:
        case BASE10:
        case BASE11:
        case BASE12:
        case BASE13:
        case BASE14:
        case BASE15:
        case BASE16:
        case BASE17:
        case BASE18:
        case BASE19:
        case BASE20:
        case BASE21:
        case BASE22:
        case BASE23:
        case BASE24:
        case BASE25:
        case BASE26:
        case BASE27:
        case BASE28:
        case BASE29:
        case BASE30:
        case BASE31:
        case BASE32:
        case BASE33:
        case BASE34:
        case BASE35:
        case BASE36:
        case BINARY:
        case OCTAL:
        case HEXADECIMAL:
        case FRACTION:
        case UNICODE_ROOT:
        case IDENTIFIER:
        case LEFT_OR_RIGHT_DER:
        case UNICODE_NAME:
        case 126:
        case 127:
        case 128:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case DECIMAL:
          case BASE1:
          case BASE2:
          case BASE3:
          case BASE4:
          case BASE5:
          case BASE6:
          case BASE7:
          case BASE8:
          case BASE9:
          case BASE10:
